--- a/src/components/TasksToDisplay/Lecture/LectureContructor./LectureParts/PresentationPart/PresentationPart.module.scss
+++ b/src/components/TasksToDisplay/Lecture/LectureContructor./LectureParts/PresentationPart/PresentationPart.module.scss
@@ -1,6 +1,6 @@
 .presentWrapper {
   padding: 24rem 16rem;
-  border-radius: 2px;
+  border-radius: 2rem;
   border: 1rem solid #7e7e7e;
   box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.12);
   margin-bottom: 48rem;
@@ -14,9 +14,7 @@
 
   border-radius: 2rem 2rem 0 0;
   background: #f4f4f4;
-
-  /* Drop Shadow */
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0rem 0rem 16rem 0rem rgba(0, 0, 0, 0.12);
 }
 
 .editPanel {
@@ -59,6 +57,24 @@
   box-shadow: 0 0 16rem 0 rgba(0, 0, 0, 0.12);
   display: flex;
   flex-direction: column;
+
+  position: relative;
+
+  & .deleteBtn {
+    width: 16rem;
+    height: 16rem;
+    position: absolute;
+    right: 40rem;
+
+    border-radius: 1.455rem;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0rem 1.45455rem 2.90909rem 0rem rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(2.909090757369995rem);
+
+    &:hover path {
+      fill: #d60000;
+    }
+  }
 }
 
 .fileWrapper {
