--- a/src/pages/CoursesPage/CourseDetailPage/CourseIntructionPage/InstructionsCategoriesList/InstructionsList/InstructionsList.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseIntructionPage/InstructionsCategoriesList/InstructionsList/InstructionsList.module.scss
@@ -5,6 +5,8 @@
     height: 48rem;
     border-radius: 2.087rem;
     box-shadow: 0px 0px 4rem 0rem rgba(0, 0, 0, 0.12);
+    position: relative;
+    transition: height 300ms ease-out;
 
     & h4 {
       color: rgba(0, 0, 0, 0.5);
@@ -13,6 +15,28 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      &.shortTitle {
+        max-width: 312rem;
+      }
+    }
+    & input {
+      color: rgba(0, 0, 0, 0.5);
+      font-family: Inter, sans-serif;
+      font-size: 14rem;
+      font-style: normal;
+      font-weight: 500;
+      background: transparent;
+      line-height: normal;
+      max-width: 312rem;
+      width: 100%;
+    }
+
+    &.newInstruction input {
+      max-width: initial;
     }
   }
 }
@@ -58,4 +82,55 @@ li.addItem {
     width: 18rem;
     height: 18rem;
   }
+}
+
+.newInstruction {
+  padding-inline: 8rem;
+  display: flex;
+  align-items: center;
+  & input {
+    flex: 1;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: Inter, sans-serif;
+    font-size: 14rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+
+    &::placeholder {
+      color: rgba(0, 0, 0, 0.2);
+      font-size: 14rem;
+    }
+  }
+
+  & button {
+    width: 24rem;
+    aspect-ratio: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    & svg {
+      width: 16rem;
+    }
+  }
+}
+
+.editBtnsWrapper {
+  display: flex;
+  gap: 8rem;
+
+  position: absolute;
+  top: 50%;
+  right: 16rem;
+  transform: translateY(-50%);
+
+  & button {
+    width: 16px;
+    aspect-ratio: 1;
+  }
+}
+
+ul > li.displayOff {
+  height: 0;
+  overflow: hidden;
 }
