feature/testConstructor + feature/editChatMessage

--- a/src/components/Header/UserPanel/NotificationButton/NotificationButton.module.scss
+++ b/src/components/Header/UserPanel/NotificationButton/NotificationButton.module.scss
@@ -105,9 +105,9 @@
   position: relative;
 }
 
-.content {
-  font-style: italic;
-}
+// .content {
+//   font-style: italic;
+// }
 
 .mediaInfo {
   position: absolute;
