--- a/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
+++ b/src/components/Chat/MessageFromChat/MessageFromChat.module.scss
@@ -12,9 +12,9 @@
     display: flex;
     flex-direction: column;
 
-    & > *:not(:nth-last-child(2), :nth-last-child(1)) {
-      align-self: flex-end;
-    }
+    // & > *:not(:nth-last-child(2), :nth-last-child(1)) {
+    //   align-self: flex-end;
+    // }
   }
 }
 
@@ -167,6 +167,7 @@
   padding: 10rem 27rem 10rem 16rem;
   box-shadow: 0rem 0rem 10rem rgba(0, 0, 0, 0.2);
   transition: all 250ms ease-out;
+  position: relative;
 
   &::before {
     content: "";
@@ -184,27 +185,28 @@
   & > *:not(:nth-last-child(2), :nth-last-child(1)) {
     margin-bottom: 8rem;
   }
+
+  & div.content {
+    font-size: 13rem;
+    line-height: 20rem;
+    color: #0c2e4c;
+    transition: color 250ms ease-out;
+    // align-self: flex-start;
+
+    & ul,
+    li {
+      list-style: inside;
+    }
+
+    & u {
+      text-decoration: underline;
+    }
+  }
 }
 
 .contentWrapperUnread {
   &::before {
     opacity: 1;
-  }
-}
-
-.content {
-  font-size: 13rem;
-  line-height: 20rem;
-  color: #0c2e4c;
-  transition: color 250ms ease-out;
-
-  & ul,
-  li {
-    list-style: inside;
-  }
-
-  & u {
-    text-decoration: underline;
   }
 }
 
