--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ code {
   text-decoration: none;
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 ins {
   text-decoration: underline;
 }
