--- a/src/pages/CoursesPage/CourseDetailPage/CourseTasksPage/TaskDetailPage/TaskDetailPage.module.scss
+++ b/src/pages/CoursesPage/CourseDetailPage/CourseTasksPage/TaskDetailPage/TaskDetailPage.module.scss
@@ -1,22 +1,14 @@
 .taskDetailWrapper {
   width: 100%;
-  // height: calc(100% - 60rem);
   height: 100%;
   background: #fff;
   border-radius: 2rem;
   box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.12);
   display: flex;
   flex-direction: column;
-
-  // & > div {
-  //   padding-left: 24rem;
-  //   padding-right: 24rem;
-  // }
 }
 
 .controlPanel {
-  // padding-top: 16rem;
-  // padding-bottom: 16rem;
   padding: 16rem 24rem;
   display: flex;
   justify-content: space-between;
@@ -66,15 +58,27 @@
   }
 
   & button.completeBtn {
-    background: #39BA6D;
+    background: #39ba6d;
     border: none;
 
     & span {
       color: #fff;
     }
   }
-}
 
+  & button.primaryColorBtn {
+    background: #4171cd;
+    border: none;
+
+    & span {
+      color: #fff;
+    }
+
+    & path {
+      fill: #fff;
+    }
+  }
+}
 
 h1 {
   color: rgba(0, 0, 0, 0.7);
